bin/testsuite/tests/compiler/src/errors/compiler5360.swg
#global testerror "Err0440"

//#[Swag.PrintBc]
#test
{
    let a = {0: 0}
}
